<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/top_title" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/talkImChoiceBtn"
        android:layout_below="@+id/talkImTop"
        android:background="#ffff" >

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:padding="20dp">
            <ScrollView 
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:scrollbarStyle="outsideOverlay" 
    		 >
        	<LinearLayout
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:orientation="vertical" >
            		<RelativeLayout
            			android:layout_width="fill_parent"
            			android:layout_height="wrap_content"
            			android:gravity="center_vertical"
            			android:clickable="true"
            			android:background="@drawable/setting_top_bg"
            			android:padding="3dp">
            			<TextView
            			    android:id="@+id/setting_photo"
        					android:layout_width="wrap_content" 
        					android:layout_height="wrap_content"
        					android:padding="8dp" 
        					android:text="@string/photo"
        					android:textSize="17sp"		
							android:textColor="#000" />
            			<ImageView
            				android:layout_width="wrap_content"
        					android:layout_height="wrap_content"        	     	
        					android:scaleType="matrix"
        					android:layout_centerVertical="true"
        					android:layout_alignParentRight="true"
        					android:clickable="true"
        					android:src="@drawable/mm_submenu" />      					
      				</RelativeLayout>
      				<RelativeLayout
            			android:layout_width="fill_parent"
            			android:layout_height="wrap_content"
            			android:gravity="center_vertical"
            			android:clickable="true"
            			android:background="@drawable/setting_middle_bg"
            			android:padding="3dp">
            			<TextView
            			    android:id="@+id/setting_nickname"
        					android:layout_width="wrap_content" 
        					android:layout_height="wrap_content"
        					android:padding="8dp" 
        					android:text="@string/nickname"
        					android:textSize="17sp"		
							android:textColor="#000" />
            			<ImageView
            				android:layout_width="wrap_content"
        					android:layout_height="wrap_content"        	     	
        					android:scaleType="matrix"
        					android:layout_centerVertical="true"
        					android:layout_alignParentRight="true"
        					android:clickable="true"
        					android:src="@drawable/mm_submenu" />      					
      				</RelativeLayout>
      				<RelativeLayout
            			android:layout_width="fill_parent"
            			android:layout_height="wrap_content"
            			android:gravity="center_vertical"
            			android:clickable="true"
            			android:background="@drawable/setting_middle_bg"
            			android:padding="3dp">
            			<TextView
            			    android:id="@+id/setting_password"
        					android:layout_width="wrap_content" 
        					android:layout_height="wrap_content"
        					android:padding="8dp" 
        					android:text="@string/password"
        					android:textSize="17sp"		
							android:textColor="#000" />
            			<ImageView
            				android:layout_width="wrap_content"
        					android:layout_height="wrap_content"        	     	
        					android:scaleType="matrix"
        					android:layout_centerVertical="true"
        					android:layout_alignParentRight="true"
        					android:clickable="true"
        					android:src="@drawable/mm_submenu" />      					
      				</RelativeLayout>
      				<RelativeLayout
            			android:layout_width="fill_parent"
            			android:layout_height="wrap_content"
            			android:gravity="center_vertical"
            			android:clickable="true"
            			android:background="@drawable/setting_middle_bg"
            			android:padding="3dp">
            			<TextView
            			    android:id="@+id/setting_sex"
        					android:layout_width="wrap_content" 
        					android:layout_height="wrap_content"
        					android:padding="8dp" 
        					android:text="@string/sex"
        					android:textSize="17sp"		
							android:textColor="#000" />
            			<ImageView
            				android:layout_width="wrap_content"
        					android:layout_height="wrap_content"        	     	
        					android:scaleType="matrix"
        					android:layout_centerVertical="true"
        					android:layout_alignParentRight="true"
        					android:clickable="true"
        					android:src="@drawable/mm_submenu" />      					
      				</RelativeLayout>
      				<RelativeLayout
            			android:layout_width="fill_parent"
            			android:layout_height="wrap_content"
            			android:gravity="center_vertical"
            			android:clickable="true"
            			android:background="@drawable/setting_middle_bg"
            			android:padding="3dp">
            			<TextView
            			    android:id="@+id/setting_whatsup"
        					android:layout_width="wrap_content" 
        					android:layout_height="wrap_content"
        					android:padding="8dp" 
        					android:text="@string/whatsup"
        					android:textSize="17sp"		
							android:textColor="#000" />
            			<ImageView
            				android:layout_width="wrap_content"
        					android:layout_height="wrap_content"        	     	
        					android:scaleType="matrix"
        					android:layout_centerVertical="true"
        					android:layout_alignParentRight="true"
        					android:clickable="true"
        					android:src="@drawable/mm_submenu" />      					
      				</RelativeLayout>
      				<RelativeLayout
            			android:layout_width="fill_parent"
            			android:layout_height="wrap_content"
            			android:gravity="center_vertical"
            			android:clickable="true"
            			android:background="@drawable/setting_middle_bg"
            			android:padding="3dp">
            			<TextView
            			    android:id="@+id/setting_college"
        					android:layout_width="wrap_content" 
        					android:layout_height="wrap_content"
        					android:padding="8dp" 
        					android:text="@string/college"
        					android:textSize="17sp"		
							android:textColor="#000" />
            			<ImageView
            				android:layout_width="wrap_content"
        					android:layout_height="wrap_content"        	     	
        					android:scaleType="matrix"
        					android:layout_centerVertical="true"
        					android:layout_alignParentRight="true"
        					android:clickable="true"
        					android:src="@drawable/mm_submenu" />      					
      				</RelativeLayout>
      				<RelativeLayout
            			android:layout_width="fill_parent"
            			android:layout_height="wrap_content"
            			android:gravity="center_vertical"
            			android:clickable="true"
            			android:background="@drawable/setting_buttom_bg"
            			android:padding="3dp">
            			<TextView
            			    android:id="@+id/setting_city"
        					android:layout_width="wrap_content" 
        					android:layout_height="wrap_content"
        					android:padding="8dp" 
        					android:text="@string/city"
        					android:textSize="17sp"		
							android:textColor="#000" />
            			<ImageView
            				android:layout_width="wrap_content"
        					android:layout_height="wrap_content"        	     	
        					android:scaleType="matrix"
        					android:layout_centerVertical="true"
        					android:layout_alignParentRight="true"
        					android:clickable="true"
        					android:src="@drawable/mm_submenu" />      					
      				</RelativeLayout>
      				</LinearLayout>
      				</ScrollView>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/buttom_buttons_bg" />

    <include layout="@layout/buttom_buttons" />

</RelativeLayout>